<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="a_hz" translatable="false">A (Hz)</string>
    <string name="abc_include_tab">Include tablature</string>
    <string name="abc_include_tab_info">Show instrument tablature below the music score</string>
    <string name="abc_inline_text">Inline ABC text</string>
    <string name="abc_inline_text_info">Copy the above code into a single line of inline ABC notation that can be pasted into the song lyrics</string>
    <string name="abc_inline_width">ABC notation staff width</string>
    <string name="abc_inline_width_info">Setting the staff width too high will cause the abc notation to become very small and will also shrink any song lyrics when used inline</string>
    <string name="abc_not_available">ABC notation view not allowed here</string>
    <string name="abc_popup_width">Popup width</string>
    <string name="abc_popup_width_info">The width of the popup window as a percentage of the screen width</string>
    <string name="abc_transpose_to_song">Auto transpose to song key</string>
    <string name="abc_transpose_to_song_info">If a key is set in the song and in the abc notation, the app will try to adjust the output of the abc notation to match the song key.</string>
    <string name="about">About</string>
    <string name="about_description">App info, help, user guide, etc.</string>
    <string name="acceleration">Acceleration</string>
    <string name="accent">Accent</string>
    <string name="accuracy">Accuracy</string>
    <string name="action">Action</string>
    <string name="action_button_info">Click to show or hide your page buttons.\n\nEach one can be assigned to song actions such as metronome, transpose, pads, etc.\nLong pressing on the main button lets you change the settings of each button.\nLong pressing on some page buttons performs quick actions such as start/stop/edit</string>
    <string name="action_long_press">Additional long press action</string>
    <string name="action_short_press">Short press/click action</string>
    <string name="actionbar_autohide">Automatically hide action bar</string>
    <string name="actionbar_display">Actionbar</string>
    <string name="actionbar_info">Change the appearance of the information in the actionbar</string>
    <string name="actionbar_left">Action bar left</string>
    <string name="actionbar_right">Action bar right</string>
    <string name="actions">Actions</string>
    <string name="actions_current_song">Actions for current song</string>
    <string name="add">Add</string>
    <string name="add_all_songs_to_set">This will add all songs shown in the song menu to your set</string>
    <string name="add_custom_slide">Add custom slide to set</string>
    <string name="add_reusable">Save as a reusable slide</string>
    <string name="add_song_to_set">Add current song to set</string>
    <string name="add_songs">Add songs</string>
    <string name="added_to_set">has been added to the end of your current set.</string>
    <string name="aeros" translatable="false">Aeros</string>
    <string name="aeros_info">Settings specific to Aeros loop pedal</string>
    <string name="aeros_mode">Aeros mode</string>
    <string name="aeros_mode_info">This restricts the number of folders to 128 in total.  The first 111 are designated as folders and the remaining 17 are designated as playlists</string>
    <string name="after">After</string>
    <string name="air_turn_long_press">AirTurn mode</string>
    <string name="air_turn_long_press_info">When using a pedal that does not send long press actions, you can simulate this by setting a desired long press time</string>
    <string name="air_turn_long_press_time">Long press wait time</string>
    <string name="alert">Alert</string>
    <string name="alert_text">Enter message text</string>
    <string name="alpha">Alpha</string>
    <string name="alphabetical">Alphabetical song index</string>
    <string name="alphabetical_level2">Two character alphabetical index</string>
    <string name="alphabetical_level2_info">Clicking on an item in the alphabetical index will toggle between one and two character alphabetical index</string>
    <string name="alphabetical_sort">Put items in alphabetical order</string>
    <string name="amp">Amp</string>
    <string name="app">App</string>
    <string name="app_id" translatable="false">4E2B0891</string>
    <string name="app_name" translatable="false">DyslexaSongbook</string>
    <string name="app_specific_file">A file specific to DyslexaSongbook</string>
    <string name="appearance_change">Adjusts appearance</string>
    <string name="apply_changes">Apply changes</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="artist">Artist</string>
    <string name="ask">Ask each time</string>
    <string name="audio">Audio</string>
    <string name="audio_player">Audio player</string>
    <string name="audio_player_info">Play saved audio files</string>
    <string name="audio_recorder">Audio recorder</string>
    <string name="audio_recorder_info">Record audio notes or ideas using your microphone</string>
    <string name="audio_source">Audio source</string>
    <string name="author">Author</string>
    <string name="autohide">Autohide</string>
    <string name="autohide_page_button">Autohide the main page button when not expanded</string>
    <string name="autohide_time">Time to keep visible (autohide time)</string>
    <string name="automatic">Automatic</string>
    <string name="autoscale">Autoscale</string>
    <string name="autoscale_info">The app will make the text as large as possible to fit the screen</string>
    <string name="autoscroll">Autoscroll</string>
    <string name="autoscroll_autostart">Keep autoscroll activated when changing songs</string>
    <string name="autoscroll_default_or_prompt">If you haven\'t set a song duration should the default values be used or do you want to be asked each time?</string>
    <string name="autoscroll_delay">Delay</string>
    <string name="autoscroll_delay_countdown">Show the initial delay time as a countdown to 0 before starting autoscroll.</string>
    <string name="autoscroll_hide">Autohide autoscroll</string>
    <string name="autoscroll_info">Adjust the autoscroll settings</string>
    <string name="autoscroll_inline_pause">Inline pause</string>
    <string name="autoscroll_link_audio">Use duration of link audio file</string>
    <string name="autoscroll_pause">Autoscroll Pause</string>
    <string name="autoscroll_time">Autoscroll delay time</string>
    <string name="autoshow_highlight">Autoshow highlighter notes</string>
    <string name="autoshow_musicscore">Autoshow music score</string>
    <string name="autoshow_musicscore_info">Automatically show music score (abc notation) when songs load</string>
    <string name="autoshow_stickynotes">Autoshow sticky notes</string>
    <string name="average">Average</string>
    <string name="back">Back</string>
    <string name="background">Background</string>
    <string name="backing">Backing</string>
    <string name="backup">Backup</string>
    <string name="backup_highlighter">Include highlighter notes</string>
    <string name="backup_import">Import DyslexaSongbook backup</string>
    <string name="backup_info">DyslexaSongbook Backup file</string>
    <string name="backup_now">Create a backup now</string>
    <string name="backup_osb">Create a backup of DyslexaSongbook songs (*.osb)</string>
    <string name="backup_sets">Backup sets</string>
    <string name="bad_songs_found">Some unexpected song files have been found in your Dyslexa/Songs/ folders that are not supported directly.  They have been moved to your Dyslexa/Import folder, but you can use the option to import multiple files to attempt to convert them to Dyslexa format and add them back to your Dyslexa/Songs/ folder</string>
    <string name="band">Band</string>
    <string name="banjo4">Banjo (4)</string>
    <string name="banjo5">Banjo (5)</string>
    <string name="bass4">Bass - 4 string</string>
    <string name="bass5">Bass - 5 string</string>
    <string name="battery">Battery</string>
    <string name="beat_buddy" translatable="false">BeatBuddy</string>
    <string name="beat_buddy_auto">Automatically send BeatBuddy song</string>
    <string name="beat_buddy_auto_info">Compares your song \'Filename\', \'Title\' and \'Also known as\' fields with your BeatBuddy database.  If a matching song is found, the folder and song code are sent over MIDI automatically</string>
    <string name="beat_buddy_browse_info">Browse the songs on the BeatBuddy (using the default project or imported project)</string>
    <string name="beat_buddy_database_reset">Clear the BeatBuddy database in the app.  This will restore the pedal defaults only.</string>
    <string name="beat_buddy_dynamic_messages">Dynamic MIDI messages (the app deals with the code)</string>
    <string name="beat_buddy_folder_info">Folder must be a number between 1 and 16384</string>
    <string name="ccli" translatable="false">CCLI</string>
    <string name="ccli_description">CCLI settings</string>
    <string name="choose_app_mode">Choose app mode</string>
    <string name="connections_connect">Connect devices</string>
    <string name="connections_description">Connect to other devices running DyslexaSongbook</string>
    <string name="controls">Controls</string>
    <string name="controls_description">Foot pedals and screen gestures</string>
    <string name="display">Display</string>
    <string name="display_settings">Change display settings (what you see on screen)</string>
    <string name="midi" translatable="false">MIDI</string>
    <string name="midi_description">Connect midi devices and change settings</string>
    <string name="performance_mode">Performance mode</string>
    <string name="performance_mode_info">Use your device as a songbook</string>
    <string name="presentation_mode_info">Control the display to a projector</string>
    <string name="presenter_mode">Presenter mode</string>
    <string name="profile">Profile</string>
    <string name="profile_explanation">Profiles are used to store your display preferences.</string>
    <string name="set_manage">Manage your sets</string>
    <string name="set_manage_info">Save, load, export, remove, import and backup sets</string>
    <string name="song_actions">Song actions</string>
    <string name="song_actions_description">Adjust settings for song actions</string>
    <string name="stage_mode">Stage Mode</string>
    <string name="stage_mode_info">Display songs split into sections or as a stage monitor</string>
    <string name="mode_prompter">Prompter Mode</string>
    <string name="mode_slipmodel">Slipmodel Prompter</string>
    <string name="storage">Storage</string>
    <string name="storage_options_info">Manage local storage (Dyslexa root folder and song folders) and synchronise storage with OpenChords</string>
    <string name="utilities">Utilities</string>
    <string name="utilities_info">Other tools for musicians</string>
    <string name="web_server">Web server</string>
    <string name="web_server_hint">Allow users without DyslexaSongbook to view your songs using a web browser</string>
    <string name="face_gesture_flip">Face Gesture Page Flip</string>
    <string name="face_gesture_flip_info">Mouth/Eye gestures to flip pages hands-free (using Mediapipe)</string>
    <string name="dyslexa_prompter">Dyslexa-Prompter</string>
    <string name="dyslexa_prompter_info">Centered focus mode with line-by-line navigation</string>
    <string name="active_line_scale">Active Line Scale</string>
    <string name="dyslexa_flow_enable">Enable Movement Background</string>
    <string name="dyslexa_flow_pattern">Movement Pattern</string>
    <string name="dyslexa_flow_color_primary">Primary Flow Color</string>
    <string name="dyslexa_flow_color_secondary">Secondary Flow Color</string>
</resources>