<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DefaultView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical">

    <ScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/extra_scroll_space_large">

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/performanceMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/performance_mode"
                android:hint="@string/performance_mode_info"
                app:size="large"/>
            <com.garethevans.church.opensongtablet.customviews.MyDivider
                style="@style/MyDividerLine"/>

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/stageMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stage_mode"
                android:hint="@string/stage_mode_info"
                app:size="large"/>
            <com.garethevans.church.opensongtablet.customviews.MyDivider
                style="@style/MyDividerLine"/>

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/presenterMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/presenter_mode"
                android:hint="@string/presentation_mode_info"
                app:size="large"/>
            <com.garethevans.church.opensongtablet.customviews.MyDivider
                style="@style/MyDividerLine"/>

            <com.garethevans.church.opensongtablet.customviews.MyMaterialButton
                android:id="@+id/prompterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mode_prompter"
                app:icon="@drawable/autoscroll" />

            <com.garethevans.church.opensongtablet.customviews.MyMaterialButton
                android:id="@+id/slipmodelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mode_slipmodel"
                app:icon="@drawable/ic_book_dyslexa" />
            <com.garethevans.church.opensongtablet.customviews.MyDivider
                style="@style/MyDividerLine"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>